@@ -24,4 +24,4 @@
 # *  e-mail address 'scipion@cnb.csic.es'
 # *
 # **************************************************************************
-__version__ = 1.9
+__version__ = 1.10
