@@ -1,3 +1,8 @@
+- April 16, 2024 (v1.10)
+        * Performance improvements
+        * Adding invert selection
+        * Allowing the subset creation from the plotter selection
+
 - Oct 21, 2023 (v1.9)
         * Performance improvements
 
